Concluídos os cardápios falta o h1 do style2
consegui concluir ambos os estilos mas faltou a fonte do h1 da style2

--- a/src/style2.css
+++ b/src/style2.css
@@ -12,6 +12,7 @@ nav {
     width: 900px;
     margin: 10px auto;
     font-family: 'Oswald', sans-serif;
+    font-size: 14px;
 }
 
 /* Use the 'Bungee Inline' font at 46px and lighter weight for the restaurant name. */
